--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -8,6 +8,7 @@
 .services-text {
   flex: 1;
   padding-right: 20px;
+  text-align: center;
 }
 
 .services-text h2 {
@@ -24,6 +25,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
+  height: 500px;
   flex: 1;
 }
 
@@ -41,10 +43,10 @@
   height: auto;
 }
 
-.service-card  img:hover {
+/* .service-card  img:hover {
   transform: scale(1.1);
   transition: 0.3 ease-in-out;
-}
+} */
 
 .service-card h3 {
   font-size: 1.5rem;
