--- a/src/pages/Blog.css
+++ b/src/pages/Blog.css
@@ -40,14 +40,15 @@
         .blog-header h1 {
           font-size: 2.5rem;
           color: #333;
-          font-weight: 700;
+          font-weight: 600;
         }
 
         /* Blog Posts */
         .blog-posts {
           display: flex;
           flex-direction: column;
-          gap: 2rem;
+          gap: 3rem;
+          padding-left: 50px;
         }
 
         .blog-card-link {
@@ -71,15 +72,15 @@
         .blog-card-image {
           flex: 0 0 262px;
           height: 200px;
-          /* width:300px; */
-           background-color: #1e2937; 
+          width:300px;
+           /* background-color: #1e2937;  */
           display: flex;
           align-items: center;
           justify-content: center;
         }
 
         .blog-card-image img {
-          width: 60%;
+          width: 420px;
           height: auto;
           object-fit: contain;
         }
@@ -95,6 +96,8 @@
           font-size: 1.5rem;
           margin-bottom: 0.5rem;
           color: #000;
+          padding-left: 60px;
+          font-weight: 400px;
           line-height: 1.3;
           cursor: pointer;
         }
@@ -120,6 +123,7 @@
 
         .author-name {
           font-weight: 500;
+          padding-left: 60px;
         }
 
         .dot {
