--- a/src/pages/Mobile.css
+++ b/src/pages/Mobile.css
@@ -335,6 +335,10 @@ height: 400px;
   
   border-radius: 5px;
 }
+.portfolio-card:hover{
+ box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+}
+
 
 .card-title {
   flex-shrink: 0;
