--- a/src/pages/Profitabill.css
+++ b/src/pages/Profitabill.css
@@ -279,13 +279,14 @@
   text-align: center;
   padding: 4rem 2rem;
   background-color: #ffffff;
+  margin-bottom: 10px;
 }
 
 .cta-title {
   font-size: 2.5rem;
   font-weight: 700;
   color: #141c2b;
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 10px; */
 }
 
 .cta-button {
